--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
   <section id="press">
     <div class="images">
-      <img class="press-img techcrunch" src="images/techcrunch.png" alt="tc-logo">
+      <img class="press-img techcrunch" src="images/TechCrunch.png" alt="tc-logo">
       <img class="press-img tnw" src="images/tnw.png" alt="tnw-logo">
       <img class="press-img bizinsider" src="images/bizinsider.png" alt="biz-insider-logo">
       <img class="press-img mashable" src="images/mashable.png" alt="mashable-logo">
